--- a/social_services/docker-compose.yml
+++ b/social_services/docker-compose.yml
@@ -1,5 +1,3 @@
-version: '3.8'
-
 services:
   web:
     build: .
@@ -17,7 +15,36 @@ services:
       - DB_NAME=social_services
       - DB_USER=postgres
       - DB_PASSWORD=${DB_PASSWORD:?DB_PASSWORD must be set}
-      - DB_HOST=host.docker.internal
+      - DB_HOST=db
       - DB_PORT=5432
-    extra_hosts:
-      - "host.docker.internal:host-gateway"
+    depends_on:
+      db:
+        condition: service_healthy
+    networks:
+      - app-network
+
+  db:
+    image: postgres:15-alpine
+    container_name: social_services_db
+    restart: unless-stopped
+    environment:
+      - POSTGRES_DB=social_services
+      - POSTGRES_USER=postgres
+      - POSTGRES_PASSWORD=${DB_PASSWORD:?DB_PASSWORD must be set}
+    volumes:
+      # Persist database data on host
+      - postgres_data:/var/lib/postgresql/data
+    healthcheck:
+      test: ["CMD-SHELL", "pg_isready -U postgres -d social_services"]
+      interval: 5s
+      timeout: 5s
+      retries: 5
+    networks:
+      - app-network
+
+volumes:
+  postgres_data:
+
+networks:
+  app-network:
+    driver: bridge
